--- a/.gitignore
+++ b/.gitignore
@@ -220,4 +220,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+env/
 # End of https://www.gitignore.io/api/vim,linux,macos,python,windows,jupyternotebooks,visualstudiocode
