Update how we read the theme

--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # Pelican
+*.pid
 output/
 env/
-# End of https://www.gitignore.io/api/vim,linux,macos,python,windows,jupyternotebooks,visualstudiocode
+pelican-themes/
