--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Markdown==3.4.1
-pelican==4.8.0
+# Markdown==3.4.1
+pelican==4.9.1
 jupyter>=1.0
 ipython>=4.0
-beautifulsoup4
+# beautifulsoup4
 ghp-import==1.0.1
 pelican-jupyter==0.10.1
-jinja2==2.11.3
-markupsafe==2.0.1
+# jinja2==2.11.3
+# markupsafe==2.0.1
 
 # For notebooks
 numpy
